# airavat_1.0_ros2_simulation

./: README.md
install/: local_setup.sh  setup.sh
install/airavat_bringup/share/airavat_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/airavat_description/share/airavat_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/airavat_ekf/share/airavat_ekf/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/airavat_nav2/share/airavat_nav2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/airavat_bringup/: CMakeLists.txt  README.md  package.xml
src/airavat_bringup/config/: gazebo_bridge.yaml
src/airavat_bringup/launch/: gazebo_launch.py
src/airavat_description/: CMakeLists.txt  README.md  package.xml
src/airavat_description/launch/: display.launch.py
src/airavat_description/rviz/: rviz_config.rviz
src/airavat_description/urdf/: imu.xacro  lidar.xacro  my_airavat_1.0_common_prop.xacro  my_airavat_1.0_compiled.urdf.xacro
src/airavat_ekf/: CMakeLists.txt  README.md
src/airavat_ekf/config/: ekf.yaml
src/airavat_nav2/: CMakeLists.txt  package.xml
src/airavat_nav2/config/: amcl_config.yaml  nav2_params.yaml
src/airavat_nav2/launch/: navigation.launch.py
src/airavat_slam/: CMakeLists.txt  README.md
src/airavat_slam/config/: mapper_params_online_async.yaml
src/airavat_slam/launch/: slam_toolbox_launch.py
(+24 files in other folders)
